@@ -1,14 +1,12 @@
 package app.humanize.service.relatorios;
 
-import app.humanize.model.ContraCheque; // Importe o modelo correto que seu repositório usa
-import app.humanize.model.Perfil;
+import app.humanize.model.ContraCheque;
 import app.humanize.model.Usuario;
-import app.humanize.repository.ContrachequeRepository; // Use o repositório fornecido
+import app.humanize.repository.ContrachequeRepository;
 import app.humanize.util.UserSession;
 
 import java.time.format.DateTimeFormatter;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class RelatorioHistoricoFinanceiro implements IGeradorRelatorio {
 
@@ -19,7 +17,7 @@ public class RelatorioHistoricoFinanceiro implements IGeradorRelatorio {
 
     @Override
     public String getNome() {
-        return bundle.getString("report.name.financialHistory"); // "Histórico Financeiro"
+        return bundle.getString("report.name.financialHistory");
     }
 
     @Override
@@ -36,25 +34,22 @@ public class RelatorioHistoricoFinanceiro implements IGeradorRelatorio {
 
         String titulo = String.format(bundle.getString("report.financialHistory.title"), usuarioLogado.getNome());
 
-        // 1. Define os cabeçalhos da tabela
         List<String> headers = List.of(
                 bundle.getString("report.financialHistory.header.date"),
-                bundle.getString("report.financialHistory.header.gross"), // (Proventos)
-                bundle.getString("report.financialHistory.header.deductions"), // (Descontos)
-                bundle.getString("report.financialHistory.header.net") // (Líquido)
+                bundle.getString("report.financialHistory.header.gross"),
+                bundle.getString("report.financialHistory.header.deductions"),
+                bundle.getString("report.financialHistory.header.net")
         );
 
-        // 2. Carrega e ordena os contracheques por data
         List<ContraCheque> cheques = contraChequeRepo.carregarContraChequesPorFuncionario(usuarioLogado.getNome())
                 .stream()
                 .sorted(Comparator.comparing(ContraCheque::getDataEmissao))
-                .collect(Collectors.toList());
+                .toList();
 
         if (cheques.isEmpty()) {
             return ReportData.empty(bundle.getString("report.error.noHistoryFound"));
         }
 
-        // 3. Mapeia os dados para as linhas do relatório
         List<List<String>> rows = new ArrayList<>();
         for (ContraCheque cheque : cheques) {
             rows.add(List.of(
